2005-04-27  Roland McGrath  <roland@redhat.com>

	* sysdeps/pthread/getcpuclockid.c (pthread_getcpuclockid)
	[__NR_clock_getres]: Use kernel-supplied CPU clocks if available.

2005-03-31  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/x86_64/sysdep-cancel.h: Use
	functionally equivalent, but shorter instructions.

2005-03-28  Daniel Jacobowitz  <dan@codesourcery.com>

	* sysdeps/mips/tls.h: New file.
	* sysdeps/unix/sysv/linux/mips/vfork.S: New file.

2005-03-21  GOTO Masanori  <gotom@debian.or.jp>

	* linuxthreads/sysdeps/m68k/Makefile: Remove to delete
	unneeded o-iterator thing.

2005-02-21  H.J. Lu  <hongjiu.lu@intel.com>

	* sysdeps/unix/sysv/linux/ia64/pt-initfini.c: Add local _init
	and _fini labels.

2005-03-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/i386/Makefile (CFLAGS-pt-initfini.s): Unconditionally
	use -mtune.

2005-03-05  Roland McGrath  <roland@redhat.com>

	* sysdeps/i386/Makefile (CFLAGS-pt-initfini.s): Use $(cc-mtune).

2005-03-05  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/powerpc/tcb-offsets.sym (thread_offsetof): Rework for GCC 4.

2005-02-09  Daniel Jacobowitz  <dan@codesourcery.com>

	[BZ #740]
	* descr.h (__pthread_find_self, thread_self): Mark as pure
	instead of const.

2005-02-07  Jakub Jelinek  <jakub@redhat.com>

	[BZ #739]
	* specific.c (pthread_key_delete): If pthread_create has not been
	called yet, clear p_specific for the current thread.
	* Makefile (tests): Add tst-tsd1.
	* tst-tsd1.c: New test.

2005-01-08  Andreas Jaeger  <aj@suse.de>

	* pthread.c (init_one_static_tls): Adjust initialization of DTV
	entry for static tls deallocation fix.

	* sysdeps/alpha/tls.h (dtv_t): Change pointer type to be struct which
	also contains information whether the memory pointed to is static
	TLS or not, include <stdbool.h>.
	* sysdeps/i386/tls.h: Likewise.
	* sysdeps/ia64/tls.h: Likewise.
	* sysdeps/powerpc/tls.h: Likewise.
	* sysdeps/s390/tls.h: Likewise.
	* sysdeps/sh/tls.h: Likewise.